tests/typing/errors/bad_ty_arity/sort.expected
File "tests/typing/errors/bad_ty_arity/sort.smt2", line 3, character 18-19:
3 | (declare-fun x () s)
                      ^
Error Bad arity: got 0 arguments for type constant s : Type -> Type
